--- a/PesquisaCEP/PesquisaCEP/PesquisaCEP.csproj
+++ b/PesquisaCEP/PesquisaCEP/PesquisaCEP.csproj
@@ -6,7 +6,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\nosignal.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Images\nosignal.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Outro\ViaCEP\ViaCEP\ViaCEP.csproj" />
   </ItemGroup>
 </Project>
