Removidas páginas que não serão utilizadas. A tela agora mostra as informações do CEP retornado. Tratamentos adicionais para caso o CEP digitado seja inválido.

--- a/PesquisaCEP/PesquisaCEP/PesquisaCEP.csproj
+++ b/PesquisaCEP/PesquisaCEP/PesquisaCEP.csproj
@@ -21,4 +21,16 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Outro\ViaCEP\ViaCEP\ViaCEP.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\PaginaPesquisaLocal.xaml.cs">
+      <DependentUpon>PaginaPesquisaLocal.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\PaginaPesquisaLocal.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
