Banco de Dados SQLite foi implementado e a tela de pesquisa online foi concluída.

--- a/PesquisaCEP/PesquisaCEP/PesquisaCEP.csproj
+++ b/PesquisaCEP/PesquisaCEP/PesquisaCEP.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Outro\ViaCEP\ViaCEP\ViaCEP.csproj" />
+    <ProjectReference Include="..\..\Data\Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
