--- a/PesquisaCEP/PesquisaCEP/PesquisaCEP.csproj
+++ b/PesquisaCEP/PesquisaCEP/PesquisaCEP.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,7 +11,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Outro\ViaCEP\ViaCEP\ViaCEP.csproj" />
     <ProjectReference Include="..\..\Data\Data.csproj" />
   </ItemGroup>
 
