--- a/ViaCEP/ViaCEP.csproj
+++ b/ViaCEP/ViaCEP.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ViaCEP\ViaCEP.csproj" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
